--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -42,9 +42,9 @@ Categorization; etc
 
 One of the most intriguing capabilities of human cognition is the ability to creatively generate new ideas and concepts. The creative use of knowledge has, however, only infrequently been the subject of inquiry in the field of categorization. To date, most of what we understand about human concept generation comes from foundational studies in the field of creative cognition \citep[e.g.,][]{marsh1999inadvertent,smith1993constraining,ward2002role,ward1994structured,ward1995s}, though some work has recently been conducted using traditional classification learning approaches \citep{jern2013probabilistic}. 
 
-Existing work on the creative use of conceptual knowledge predominantly explores the role of prior knowledge in generating novel concepts. The core experimental phenomenon is that people generate categories possessing the same distributional properties as known categories. For example, in a canonical study \citet{ward1994structured} asked participants to draw and describe novel species of plants and animals that might exist on other planets. Generation was strongly constrained by prior knowledge of Earth plants and animals: people generated alien species using the same structural forms found on Earth (e.g., eyes, legs, wings) and possessing the same feature correlations observed on Earth (e.g., feathers co-occur with wings). Likewise, exemplars drawn from the same species were less variable than animals drawn from different species, and possessed features that were adaptive for their environment (as is the case on Earth).
+Existing work on the creative use of conceptual knowledge predominantly explores the role of prior knowledge in generating novel concepts. The core experimental phenomenon is that people generate categories possessing the same distributional properties as known categories. For example, in a canonical study \citet{ward1994structured} asked participants to draw and describe species of plants and animals that might exist on other planets. Generation was strongly constrained by prior knowledge of Earth plants and animals: people generated alien species using the same structural forms found on Earth (e.g., eyes, legs, wings) and possessing the same feature correlations observed on Earth (e.g., feathers co-occur with wings). Likewise, exemplars drawn from the same species were less variable than animals drawn from different species, and possessed features that were adaptive for their environment (as is the case on Earth).
 
-Similar results were obtained more recently in a study conducted within a traditional categorization paradigm. \citet{jern2013probabilistic} trained participants on a set of experimenter-defined categories composed of exemplars within an artificial three-dimensional domain (e.g., 2D shapes varying in size, hue, and saturation). After a short training phase, participants were asked to generate exemplars from a new category. Participants were provided with a set of scales to adjust the feature values of each generated stimulus, and were given unlimited time to create each example. As in the classic \cite{ward1994structured} experiment, \citet{jern2013probabilistic} found that people generated artificial categories possessing the same feature variance and correlations as the experimenter-defined categories in the domain.
+Similar results were obtained in a more recent study conducted within a traditional categorization paradigm. \citet{jern2013probabilistic} trained participants on a set of experimenter-defined categories composed of exemplars within an artificial three-dimensional domain (e.g., 2D shapes varying in size, hue, and saturation). After a short training phase, participants were asked to generate exemplars from a new category. Participants were provided with a set of scales to adjust the feature values of each generated stimulus, and were given unlimited time to create each example. As in the classic \cite{ward1994structured} experiment, \citet{jern2013probabilistic} found that people generated artificial categories possessing the same feature variance and correlations as the experimenter-defined categories in the domain.
 
 Results such as these have motivated formal accounts of generation that explicitly invoke the idea that people re-purpose existing knowledge to generate something new -- either by copying-and-tweaking an observation retrieved from memory \citep{ward2002role,ward1995s}, or by abstracting the distributional structure of categories in the domain \citep{jern2013probabilistic}.
 
@@ -59,7 +59,7 @@ Results such as these have motivated formal accounts of generation that explicit
 
 In this paper, we introduce a novel exemplar-based approach to category generation, the PACKER model (\textit{Producing Alike and Contrasting Knowledge using Exemplar Representations}), which creates new categories by balancing two constraints: (1) new categories should be different from known categories (minimizing between-class similarity), and (2) new categories should be internally coherent (maximizing within-class similarity). As such, PACKER is a significant departure from previous accounts of generation -- rather than proposing that people create new categories by re-purposing existing knowledge, PACKER explains generation exclusively in terms of the well-studied mechanics of exemplar representations and therefore possesses a rich connection to the wider body of research on category learning.
 
-In the sections below, we formally describe the PACKER model and explore its predictions in a behavioral experiment and simulations. Rather than formally evaluate PACKER on the benchmarks reviewed above, however, we instead focus on testing predictions made by PACKER that distinguish the model from previous approaches.
+In the sections below, we formally describe the PACKER model and explore its predictions in a behavioral experiment. Rather than evaluate PACKER on the benchmarks reviewed above, however, we instead focus on testing predictions made by PACKER that distinguish it from previous approaches.
 
 
 \section{PACKER: An Exemplar Model}
@@ -73,18 +73,16 @@ As in the GCM, the similarity between two examples, $s(x_i, x_j)$, is defined as
 \end{equation}
 where $w_k$ is a vector of attention parameters ($\sum_k{w_k} = 1$), weighting to the importance of each feature in the similarity computation, and $c$ ($<0$) is a specificity parameter controlling the spread of exemplar generalization. The attention weights are of interest in explaining individual differences in generation strategy (discussed below), but for our formal simulations they are set uniformly.
 
-% Note something about minkowski metric? Or can we assume people know that.
-
-When prompted to generate a new example, the model considers both the similarity to examples from other categories as well as the similarity to examples in the target category. More formally, the aggregated similarity $a$ between generation candidate $y$ and the model's stored exemplars $x$ can be computed as:
+When prompted to generate a new example, the model considers both the similarity to examples from other categories as well as the similarity to examples in the target category. The aggregated similarity $a$ between generation candidate $y$ and the model's stored exemplars $x$ can be computed as:
 \begin{equation}
   a(y, x) = \sum_j{\hat{f_j} s(y, x_j)}
   \label{eq:packer-ss}
 \end{equation}
-where $\hat{f_j}$ is a function specifying each example's degree of contribution toward generation. Although $\hat{f_j}$ may be set arbitrarily, in PACKER it is set according to class assignment. For known members of contrast categories, $\hat{f_j} = \phi$. For known members of the target category, $\hat{f_j} = \gamma$. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of target- and contrast-category similarity to generation. Larger absolute values for either parameter produce greater consideration of that type of similarity, with values of 0 producing no effect. Negative values produce a `repelling' effect (exemplars are less likely to be generated nearby). Conversely, positive values produce a `pulling' effect (exemplars are more likely to be generated nearby). 
+where $\hat{f_j}$ is a function specifying each example's degree of contribution toward generation. Although $\hat{f_j}$ may be set arbitrarily, in PACKER it is set according to class assignment. $\hat{f_j} = \phi$ for known members of contrast categories, $\hat{f_j} = \gamma$ for members of the target category. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of target- and contrast-category similarity to generation. Larger absolute values for either parameter produce greater consideration of that type of similarity, with values of 0 producing no effect. Negative values produce a `repelling' effect (exemplars are less likely to be generated nearby). Conversely, positive values produce a `pulling' effect (exemplars are more likely to be generated nearby). 
 
 Because the model's main proposals are that new categories should be different from existing categories, and exemplars belonging to the same category should be similar to one another, PACKER is commonly simulated under the constraints that $\phi \leq 0$, $\gamma \geq 0$, thus, similarity to contrast categories is effectively subtracted from similarity to the target category. When $-\phi = \gamma$, negative aggregate similarities indicate that $y$ is more similar to members of contrast categories, and positive values indicate $y$ is more similar to the target category.
 
-The probability that a given candidate $y$ will be generated is evaluated using the \citet{luce1977choice} choice axiom. Candidates with larger aggregate similarity are more likely to be generated compared to candidates with smaller aggregate similarity:
+The probability that a given candidate $y$ will be generated is evaluated using the \citet{luce1977choice} choice axiom. Candidates with greater values of $a$ are more likely to be generated than candidates with smaller values:
 \begin{equation}
 p(y) = \dfrac
     { exp( { \theta \cdot a(y, x) } ) }
@@ -95,16 +93,14 @@ where $\theta$ ($\geq 0$) is a free parameter controlling overall response deter
 
 \subsection{Summary}
 
-The PACKER model described above explains exemplar and category generation under a traditional exemplar-similarity approach, proposing that people generate categories by maximizing within-category similarity and minimizing between-category similarity. These core design principles yield unique predictions about the generation. Not only does the model lack mechanisms for copying knowledge of existing categories, but it also specifies precisely how generated classes should \textit{differ} from existing ones. Thus, unlike previous accounts, distributional properties of known categories affect generation only insofar as they constrain inter-exemplar similarities. Instead, the \textit{location} of known categories in the domain is crucial because it constrains remaining possible locations for new categories.
+The PACKER model described above explains exemplar and category generation under a traditional exemplar-similarity approach, proposing that people generate categories by maximizing within-category similarity and minimizing between-category similarity. The underlying processes assumed by PACKER are highly similar to those in the GCM \citep{nosofsky1984choice}, with the only alteration being that the model's response is a function of the $a$ metric, which is the aggregate of potentially counteracting similarities (positive or negative values), rather than the relative summed similarity assumed in the original model.
 
-
-
-
+In a later section, we will explore the unique predictions yielded by these design principles. First, however, we contrast PACKER with existing approaches in the field. 
 
 
 \section{Previous Accounts of Category Generation}
 
-As noted above, existing accounts of category generation focus primarily on explaining the phenomenon that generated categories tend to possess distributional similarities with existing categories. \citet{jern2013probabilistic} were the first (as far as we know) to conduct formal simulations on category generation. Thus, the models they considered represent the strongest alternatives to PACKER. Below, we describe in detail two of these alternatives: a \textit{copy-and-tweak} account that was initially proposed within the creative cognition literature \citep{ward2002role,ward1995s}, and the \textit{hierarchical sampling} model developed by \citet{jern2013probabilistic}.
+As noted in the introduction, existing accounts of category generation focus primarily on explaining the phenomenon that generated categories tend to possess distributional similarities with existing categories. \citet{jern2013probabilistic} were the first (as far as we know) to conduct formal simulations on category generation. Thus, the models they considered represent the strongest alternatives to PACKER. Below, we describe in detail two of these alternatives: a \textit{copy-and-tweak} account that was initially proposed within the creative cognition literature \citep{ward2002role,ward1995s}, and the \textit{hierarchical sampling} model developed by \citet{jern2013probabilistic}.
 
 
 \subsection{Copy-and-Tweak}
@@ -125,7 +121,7 @@ After a source exemplar is retrieved, the similarity between generation candidat
     {\sum_i{exp(\theta \cdot s(y_i,z)) g(y_i,z,\tau)}} 
 \end{equation}
 % 
-where $\theta$ is a response determinism parameter. $g$ is a function specifying whether $y$ exceeds the similarity threshold, $\tau$, which is treated as a free parameter ($0<\tau\leq1$). $g = 1$ when $s(y,z) < \tau$ and $g = 0$ otherwise. \citet{jern2013probabilistic} did not implement any similarity threshold mechanism, thus, their model is a special case when $\tau = 1$ (any exemplar may be selected).
+where $\theta$ is a response determinism parameter. $g$ is a function specifying whether $y$ exceeds the similarity threshold, $\tau$, which is treated as a free parameter ($0<\tau\leq1$). $g = 1$ when $s(y,z) < \tau$ and $g = 0$ otherwise. Thus, exemplars exceeding the similarity threshold will not be generated, but exemplars just under the threshold are most likely. \citet{jern2013probabilistic} did not implement any similarity threshold mechanism, and so their model is the special case where $\tau = 1$ (any exemplar may be selected).
 
 To obtain predictions not depending on a given source example, the model's predictions can be aggregated over all possible sources:
 
@@ -133,12 +129,12 @@ To obtain predictions not depending on a given source example, the model's predi
   p(y) = \sum_z{p(z)p(y|z) }
 \end{equation}
 % 
-Thus, the probability that an example $y$ will be selected is a function of its similarity to each of the possible sources, as well as the probability each source will be retrieved.
+Thus, the probability that an example $y$ will be selected is a function of its generation probability given each of the sources, and the probability each source will be retrieved.
 
 
 \subsection{Hierarchical Sampling}
 
-\citet{jern2013probabilistic} reported several experiments revealing systematic flaws in the copy-and-tweak account. Instead, their results supported a hierarchical sampling model, in where categories are represented as probability distributions in a multidimensional space, with each stimulus feature corresponding to a dimension of the space. Observed exemplars (represented as points in this space) are viewed as samples from their underlying category distribution (e.g., a multivariate normal distribution). These category distributions are in turn viewed as samples from an underlying domain distribution, which represents the common distributional characteristics among known categories (e.g., feature variance, feature correlations). When asked to generate a novel class, people are thought to sample a category distribution from the domain distribution, and then sample exemplars from the category distribution. Thus, exemplars generated into novel classes tend to obey the same distributional properties of known categories. 
+\citet{jern2013probabilistic} reported several experiments revealing systematic flaws in the copy-and-tweak account. Instead, their results supported a hierarchical sampling model, in where categories are represented as probability distributions in a $k$-dimensional feature space. Observed exemplars (represented as points in this space) are viewed as samples from their underlying category distribution (e.g., a multivariate normal distribution). These category distributions are in turn viewed as samples from an underlying domain distribution, which represents the common distributional characteristics among known categories (e.g., feature variance, feature correlations). When asked to generate a novel class, people are thought to sample a category distribution from the domain distribution, and then sample exemplars from the category distribution. Thus, exemplars generated into novel classes tend to obey the same distributional properties of known categories. 
 
 As in the implementation reported by \cite{jern2013probabilistic}, we assume that each category's exemplars are distributed according to a multivariate normal distribution with parameters ($\mu, \Sigma$). To obtain a conjugate model, we assume that the domain of categories is inverse-Wishart distributed. Space does not allow for a full derivation of this model, and so we will simply report how the target category parameters ($\mu_B, \Sigma_B$) are inferred.
 
@@ -151,7 +147,7 @@ The \citet{jern2013probabilistic} implementation does not assume anything about 
     \label{eq:hs_mus}
 \end{equation}
 % 
-where $\mu_0$ is the prior on $\mu_B$. Because \citet{jern2013probabilistic} sample $\mu_B$ uniformly, we set $\mu_0$ to the center of the domain space. $\kappa$ ($>0$) is a free parameter, weighting the importance of $\mu_0$. $n_B$ and $\bar{x_B}$ are the target category sample size and mean, respectively.In the case where the target class is populated (i.e., $n_B > 0$), $\mu_{B}$ ends up lying somewhere between $\mu_{0}$ and $\bar{x_y}$, depending on $\kappa$ and $n_B$. When the target class has no members, Equation \ref{eq:hs_mus} reduces to $\mu_{B} = \mu_{0}$. Because we set $\mu_0$ to the center of the space, this outcome is the same as if we had integrated over all possible $\mu_0$.
+where $\mu_0$ is the prior on $\mu_B$. Because \citet{jern2013probabilistic} sample $\mu_B$ uniformly, we set $\mu_0$ to the center of the domain space. $\kappa$ ($>0$) is a free parameter, weighting the importance of $\mu_0$. $n_B$ and $\bar{x_B}$ are the target category sample size and mean, respectively. In the case where the target class is populated (i.e., $n_B > 0$), $\mu_{B}$ ends up lying somewhere between $\mu_{0}$ and $\bar{x_y}$, depending on $\kappa$ and $n_B$. When the target class has no members, Equation \ref{eq:hs_mus} reduces to $\mu_{B} = \mu_{0}$. Because we set $\mu_0$ to the center of the space, this outcome is the same as if we had integrated over all possible $\mu_0$.
 
 Unlike $\mu_B$, $\Sigma_B$ cannot be computed considering only the members of the target category. Instead, $\Sigma_B$ is influenced both by the distribution of the members of the target category as well as members of other categories through the domain distribution, $\Sigma_D$. In our implementation, $\Sigma_D$ is inferred based on the observed (empirical)  covariance matrices of the known categories in the domain, $C$. We assume these covariance matrices to be Wishart-distributed, and so $\Sigma_D$ can be computed as:
 
@@ -187,9 +183,11 @@ where $\theta$ is a response determinism parameter.
 
 \section{Behavioral Experiment}
 
-The behavioral experiment described below was designed to test whether the \textit{location} of contrast categories (as opposed to their structure), influences generation. The experiment follows the paradigm developed by \citet{jern2013probabilistic}: first, participants are exposed to members of a known category (`Alpha', or `A'), and are then asked to generate exemplars belonging to a new category (`Beta', or `B'). 
+Whereas the copy-and-tweak and hierarchical sampling models both assume explicit mechanisms to re-purpose knowledge about known categories, the PACKER model forgoes these mechanisms entirely. Thus, whereas the distributional structure of observed categories will be the primary determinant of generation in the copy-and-tweak and hierarchical sampling models, these properties should only affect PACKER's generation insofar as they constrain inter-exemplar similarities. Instead, the \textit{location} of known categories in the domain is crucial because it constrains remaining possible locations for new categories.
 
-We developed two Alpha categories (see Figure \ref{fig:middle-bottom-conditions}), instantiating the two conditions of the experiment. In both conditions, members of the Alpha category are tightly clustered, with equal variance on both features and no correlation between features. Our manipulation is fairly `weak': the conditions have only a slight difference in the Y-Axis position of the Alpha category. In the `Middle' condition the Alpha category is placed in the center of the space, in the `Bottom' condition the Alpha category is placed in the bottom-center of the space. 
+The behavioral experiment described below was designed to test this key prediction:  does the \textit{location} of contrast categories (as opposed to their structure), influence generation? The experiment follows the paradigm developed by \citet{jern2013probabilistic}: first, participants are exposed to members of a known category (`Alpha', or `A'), and are then asked to generate exemplars belonging to a new category (`Beta', or `B'). 
+
+We developed two Alpha categories (see Figure \ref{fig:middle-bottom-conditions}), instantiating the two conditions of the experiment. In both conditions, members of the Alpha category are tightly clustered, with equal feature variance and no feature correlations. Our manipulation is fairly `weak': the conditions have only a slight difference in the y-axis position of the Alpha category. In the `Middle' condition the Alpha category is placed in the center of the space, in the `Bottom' condition the Alpha category is placed in the bottom-center of the space. 
 
 \begin{figure}
     \begin{center}
@@ -199,12 +197,9 @@ We developed two Alpha categories (see Figure \ref{fig:middle-bottom-conditions}
     \end{center}
 \end{figure}
 
-Although our manipulation is minimal, the PACKER model is capable of predicting strong between-condition differences. The PACKER model proposes that the nature of the space not occupied by the Alpha category determines where members of the Beta category are likely to be generated. Thus, the lower areas of the stimulus space should be less frequently used for generation in the Bottom condition compared to the Middle (as these areas possess greater similarity to the Bottom Alpha category). Conversely, the upper areas of the stimulus space should be used for generation more frequently in the Bottom condition compared to Middle.
+Although our manipulation is minimal, the PACKER model is capable of predicting strong between-condition differences. PACKER proposes that the nature of the space not occupied by the Alpha category determines where members of the Beta category are likely to be generated. Thus, the lower areas of the stimulus space should be less frequently used for generation in the Bottom condition compared to the Middle (as these areas possess greater similarity to the Bottom Alpha category). Conversely, the upper areas of the stimulus space should be used for generation more frequently in the Bottom condition compared to Middle.
 
-More generally, the PACKER model proposes that the probability a stimulus $y$ will be generated is a function of its similarity to contrast categories \textit{and} to members of the target category. Two more general predictions (not specific to either condition) follow from this proposal: (1) the location of beta examples should be positively related to distance from the Alpha category, (2) Beta examples should be more similar to one another than they are to members of the Alpha category.
-
-
-% THIS IS WHERE NOLAN STOPPED EDITING AFTER THE INTRO REFORMULATION
+More generally, the PACKER model proposes that the probability a stimulus $y$ will be generated is a function of its similarity to contrast categories \textit{and} to members of the target category. Two more general predictions (not specific to either condition) follow from this proposal: (1) the location of Beta examples should be positively related to distance from the Alpha category, and (2) Beta examples should be more similar to one another than they are to members of the Alpha category.
 
 \subsection{Participants \& Materials}
 
@@ -212,7 +207,7 @@ We recruited 122 participants from Amazon Mechanical Turk. All participants were
 
 \subsection{Procedure}
 
-Participants began the experiment with a short training phase (3 blocks of 4 trials), where they iteratively observed exemplars belonging to the `Alpha' category. Participants were instructed to learn as much as they can about the Alpha category, and that they would answer a series of test questions afterwards. On each trial, a single exemplar from the Alpha category was presented, and participants were given as much time as they desired before moving on. Participants were shown a preview of the range of possible colors and sizes prior to training.
+Participants began the experiment with a short training phase (3 blocks of 4 trials), where they observed exemplars belonging to the `Alpha' category. Participants were instructed to learn as much as they can about the Alpha category, and that they would answer a series of test questions afterwards. On each trial, a single Alpha category exemplar was presented, and participants were given as much time as they desired before moving on. Exemplars were randomly ordered within each block. Participants were shown a preview of the range of possible colors and sizes prior to training.
 
 Following the training phase, participants were asked to generate four examples belonging to another category called `Beta'. Participants were instructed that members of the Beta category could be quite similar or different depending on what they think makes the most sense for the category, but that they were not allowed to make the same example twice. 
 
@@ -224,15 +219,17 @@ As in the \citet{jern2013probabilistic} experiments, generation was completed us
 
 \subsection{Results}
 
-Because the conditions differ only in their location along the vertical axis (see Figure \ref{fig:middle-bottom-conditions}), our main interest is in the generation of Beta examples above and below the contrast category. A highly detailed depiction of our results is shown in Figure \ref{fig:middle-bottom-yranges}, wherein each participant's generated category is depicted in terms of its use of the vertical axis. As is evident in Figure \ref{fig:middle-bottom-yranges}, we observed a great deal of individual differences in generation strategy: whereas some participants generated all four Beta examples within a narrow range of the Y axis, others generated Beta examples along a fairly wide range. 
+Because the conditions differ only in their location along the y-axis (see Figure \ref{fig:middle-bottom-conditions}), our main interest is in the generation of Beta examples above and below the contrast category. Several sample Beta categories are depicted in Figure \textbf{???????}. As is evident in Figure \textbf{???????}, we observed a great deal of individual differences in generation strategy: whereas some participants generated all four Beta examples within a narrow range, others generated Beta examples along a fairly wide range. 
 
-\begin{figure*}
+\begin{figure}
     \begin{center}
-    \input{figs/middle-bottom-yranges.pgf}
-    \caption{Behavioral results. Each line shows the minimum and maximum value of a generated category along the Y (vertical) axis. Dots along each line represent the positions of individual exemplars in the category, and each participant's category is shown on a separate line. Participants are sorted by overall Y axis range, and then by condition.}
-    \label{fig:middle-bottom-yranges}
+    \inputpgf{figs/}{distance.figs.pgf}
+    \caption{Behavioral results. \textit{Top}: Frequency of exemplar generation as a function of distance from the center of the Alpha category. \textit{Bottom}: Relation between average within- and Between-category distance for every participant. }
+    \label{fig:distance.figs}
     \end{center}
-\end{figure*}
+\end{figure}
+
+
 
 To more specifically evaluate the key predictions made by PACKER, we determined the number of participants in each condition who placed at least one Beta example within the top `rows' of the space (one of the top two possible Y axis values), as well as the number of participants who placed at least one example in one of the bottom rows. The resulting contingency tables data are shown in Table \ref{table:subset-table}.
 
